# crazylibs

./: README.md  noxfile.py  pyproject.toml
.github/workflows/: python-publish-pypi.yaml
docs/source/: changelog.rst  conf.py  index.rst
src/crazylibs/: cli.py  stories.py
stories/: a_day_at_the_zoo.txt
tests/: test_app.py
