[project]
name = "crazylibs"
version = "0.2.0"
description = "crazylibs"
readme = "README.md"
authors = [{ name = "Bradley Reynolds", email = "bradley.reynolds@darbia.dev" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "typer==0.12.5"
]

[project.urls]
repository = "https://github.com/letsbuilda/crazylibs"
documentation = "https://docs.letsbuilda.dev/crazylibs/"

[project.scripts]
crazylibs = "crazylibs.cli:app"

[project.optional-dependencies]
dev = [
    "nox==2024.10.9",
    "pre-commit==4.0.1",
    "ruff==0.7.1",
    "mypy==1.13.0",
]
tests = [
    "pytest==8.3.3",
    "pytest-randomly==3.15.0",
]
docs = [
    "sphinx==8.1.3",
    "furo==2024.8.6",
    "sphinx-autoapi==3.3.2",
    "releases==2.1.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"crazylibs" = ["py.typed"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "ALL",
]
ignore = [
    "CPY001", # (Missing copyright notice at top of file) - No license
]

[tool.ruff.lint.extend-per-file-ignores]
"docs/*" = [
    "INP001", # (File `docs/*.py` is part of an implicit namespace package. Add an `__init__.py`.) - Docs are not modules
]
"tests/*" = [
    "INP001", # (File `tests/*.py` is part of an implicit namespace package. Add an `__init__.py`.) - Tests are not modules
    "S101",   # (Use of `assert` detected) - Yes, that's the point
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.coverage.run]
source = [
    "crazylibs",
]
